2005-03-14  0.8.1.55  Brian Wellington <bwelling@xbill.org>
	* common/gtk/aboutbox.c, common/gtk/aboutbox.h, common/gtk/Makefile.am,
	client/gtk/gui.c, server/gtk/gnocatan-server-gtk.c: Add common code for
	displaying about boxes; make the client and server use it.

2005-03-12  0.8.1.55  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, added gnocatan.spec.in, removed gnocatan.spec: The
	spec is automatically generated and uses the current version.
	* ai/ai.c, client/ai/ai.c, client/gtk/connect.c, common/network.c,
	common/network.h, meta-server/Makefile.am,
	meta-server/gnocatan-meta-server.c, server/gnocatan-server-console.c,
	server/gnocatan-server.c, server/gnocatan-server.h, server/meta.c,
	server/server.c, server/server.h, server/gtk/gnocatan-server-gtk.c:
	More consistent use of the environment variables GNOCATAN_DIR,
	GNOCATAN_META_SERVER, GNOCATAN_SERVER_CONSOLE and
	GNOCATAN_SERVER_NAME. Moved common code to common/network.c.
	* docs/gnocatan-meta-server.6, docs/gnocatan-server-console.6,
	docs/gnocatan-server-gtk.6, docs/gnocatan.6, docs/gnocatanai.6: Added
	ENVIRONMENT section and FILES section. Added documentation of some new
	commandline options.
	* meta-server/gnocatan-meta-server.c (client_create_new_server): Use
	-m and -n commandline options instead of the environment variable. The
	server-console started from the meta-server will use the same hostname
	as the meta-server.
	* server/gnocatan-server-console.c (main): Correctly initialise
	hostname.
	
2005-03-12  Arjan Schrijver <arjan@anymore.nl>
	* meta-server/gnocatan-meta-server.c: Added commandline options to
	limit the portrange of the metaserver, and to set the hostname.

2005-03-02  0.8.1.54  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: Reversal of the patch in 0.8.1.48, because
	it would set the client to the state turn when performing a maritime
	trade. Added a reset of the have_turn flag when game over is reached.
